--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
     <script>
-      window.WEATHER_API_KEY = "process.env.WEATHER_API_KEY";
+      window.WEATHER_API_KEY = "__VERCEL_ENV_PLACEHOLDER__";
     </script>
     <script src="script.js"></script>
 </body>
